# xlib

./: .clang-format  .githook.sh  CMakeLists.txt  README.md  compile.sh
cmake/: GitHash.cmake  Pack.cmake  StaticAnalyzer.cmake
cmake/toolchain/: ToolchainRasp.cmake  ToolchainX64.cmake
example/: CMakeLists.txt  main.c  main.cpp
include/core/: camera.h  circle.h  context.h  lidar.h  line.h  macros.h  painter.h  point.h  rectangle.h  shape.h  triangle.h  updater_impl.h
include/xlib/: common.h  updater.h  updater_factory.h  xlib_api.h
include/xlib/core/: macros.h  module.h  updater_impl.h
src/: CMakeLists.txt  updater_factory.cpp  xlib_api.cpp
tests/regression/: CMakeLists.txt  main.cpp
tests/unittest/: CMakeLists.txt  main.cpp
tools/: cppcheck.sh  cppcheck.xslt
